--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 				<form class="login100-form validate-form" method="post" name="google-sheet" autocomplete="off">
 					<span class="login100-form-title">
-						Enter Resource Details
+						Enter CSS Resource Details
 					</span>
 
 					<div class="wrap-input100">
@@ -61,7 +61,7 @@
 					</div>
 					
 					<div class="container-login100-form-btn">
-						<input class="login100-form-btn" name="submit" type="submit" value="Login" />
+						<input class="login100-form-btn" name="submit" type="submit" value="Submit" />
 							
 					</div>
 				</form>
