--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 		form.addEventListener('submit', e => {
 		  e.preventDefault()
 		  fetch(scriptURL, { method: 'POST', body: new FormData(form)})
-			.then(response => window.location.reload();)
+			.then(response => window.location.reload(true))
 			.catch(error => console.error('Error!', error.message))
 		})
 	  </script>
